# lab_final

./: CMakeLists.txt  commands.txt  main.cpp
include/: Prog.h
src/: Prog.cpp
test/: test_Prog.cpp
